# stylus-starkex-benchmark

./: .gitignore  Makefile  README.md  c.txt  extracter.py
evm-verifier/solidity/contracts/: FriLayer.sol  MerkleStatementVerifier.sol  MerkleVerifier.sol  Prng.sol  StarkVerifier.sol  VerifierChannel.sol
evm-verifier/solidity/contracts/components/: FactRegistry.sol
evm-verifier/solidity/contracts/cpu/: CpuPublicInputOffsetsBase.sol  MemoryPageFactRegistry.sol
evm-verifier/solidity/contracts/cpu/layout7/: CpuConstraintPoly.sol  CpuFrilessVerifier.sol  CpuVerifier.sol  Fri.sol  FriStatementVerifier.sol  LayoutSpecific.sol  MemoryAccessUtils.sol  StarkVerifier.sol
evm-verifier/solidity/contracts/cpu/periodic_columns/: PedersenHashPointsXColumn.sol  PedersenHashPointsYColumn.sol  coeffs.rs  extracter.py
evm-verifier/solidity/contracts/gps/: GpsStatementVerifier.sol
inputs/: expected_out.txt  gps.txt  gps_input_aux.txt  gps_input_proof.txt  gps_input_proof_params.txt  gps_input_task.txt  mpfr.txt  mpfr_cont.txt  mpfr_from_gps.txt  proof.txt  public_input.txt
scalable-dex/contracts/src/components/: FactRegistry.sol
script/: DeployMemoryPageFactRegistry.s.sol  PedersenHashPointsXColumn.s.sol  PeriodicColumns.s.sol  Poseidon0Full.s.sol  Poseidon1Full.s.sol
stylus/: a.txt  deploy.sh
stylus/constraint-poly/: Cargo.toml
stylus/constraint-poly-finalizer/: Cargo.toml
stylus/constraint-poly-finalizer/src/: lib.rs  main.rs
stylus/constraint-poly-preparer/: Cargo.toml
stylus/constraint-poly-preparer/src/: lib.rs  main.rs
stylus/constraint-poly/src/: interfaces.rs  lib.rs  main.rs
stylus/cpu/: Cargo.toml
stylus/cpu-verifier/: Cargo.toml  a.txt
stylus/cpu-verifier/src/: fri-statement-verifier.rs  interfaces.rs  layout-specific.rs  lib.rs  main.rs  merkle-statement-verifier.rs  merkle_verifier.rs  prime-field-element0.rs  stark-verifier.rs  verifier-channel.rs
stylus/cpu-verifier/src/tests/: mock_inputs.rs  test_constants.rs
stylus/cpu/src/: consts.rs  fri.rs  layout_specific.rs  lib.rs  macros.rs  main.rs  marco.rs  memory_access.rs  merkle_statement_verifier.rs  public_memory_offsets.rs  stark_verifier.rs
stylus/fri-statement-verifier/: Cargo.toml
stylus/fri-statement-verifier/src/: interfaces.rs  lib.rs  main.rs  prime-field-element0.rs
stylus/gps-sv/: Cargo.toml
stylus/gps-sv/src/: bootloader.rs  consts.rs  lib.rs  main.rs
stylus/macros/: Cargo.toml
stylus/macros/src/: lib.rs
stylus/mock-provider/: Cargo.toml
stylus/mock-provider/src/: lib.rs  main.rs
stylus/mpfr/: Cargo.toml
stylus/mpfr/src/: lib.rs
stylus/offsets/: Cargo.toml
stylus/offsets/src/: lib.rs  memory_map.rs
stylus/oods/: Cargo.toml
stylus/oods/src/: consts.rs  lib.rs  main.rs
stylus/pedersen-hp-x-c/: Cargo.toml
stylus/pedersen-hp-x-c/src/: coeffs.rs  lib.rs  main.rs
stylus/pedersen-hp-y-c/: Cargo.toml
stylus/pedersen-hp-y-c/src/: coeffs.rs  lib.rs  main.rs
stylus/pederson-frk-0-col/src/: lib.rs  main.rs
stylus/pederson-frk-1-col/: Cargo.toml
stylus/pederson-frk-1-col/src/: main.rs
stylus/pederson-frk-2-col/: Cargo.toml
stylus/pederson-frk-2-col/src/: lib.rs  main.rs
stylus/poseidon-frk-0-col/: Cargo.toml
stylus/poseidon-frk-0-col/src/: lib.rs  main.rs
stylus/poseidon-frk-1-col/: Cargo.toml
stylus/poseidon-frk-1-col/src/: lib.rs  main.rs
stylus/poseidon-frk-2-col/: Cargo.toml
stylus/poseidon-frk-2-col/src/: lib.rs  main.rs
stylus/poseidon-prk-0-col/: Cargo.toml
stylus/poseidon-prk-0-col/src/: lib.rs  main.rs
stylus/poseidon-prk-1-col/: Cargo.toml
stylus/poseidon-prk-1-col/src/: lib.rs  main.rs
stylus/prime-field-element0/: Cargo.toml
stylus/prime-field-element0/src/: lib.rs  main.rs
stylus/stark-verifier/: Cargo.toml
stylus/stark-verifier/src/: lib.rs  main.rs
stylus/stark-verifier/src/tests/: test_constants.rs
stylus/test-utils/: Cargo.toml
stylus/test-utils/src/: lib.rs  main.rs
stylus/testdata/: fin_input.hex  oods_input.hex  oods_out_cast.hex  oods_output.hex  poly_input.hex
stylus/utils/: Cargo.toml
stylus/utils/src/: lib.rs  prime-field-element0.rs  public-memory-offset.rs  require.rs
stylus/verifier-channel/: Cargo.toml
stylus/verifier-channel/src/: lib.rs  main.rs
stylus/verifier-channel/src/tests/: test_constants.rs
stylus/verifier-init/: Cargo.toml
stylus/verifier-init/src/: lib.rs  main.rs
test/: CpuVerifier.t.sol  GpsStatementVerifierCompile.t.sol  MemoryPageFactRegistry.t.sol  PeriodicColumnts.t.sol  test.sh
