[package]
name = "oods"
version = "0.1.11"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/oods"
repository = "https://github.com/OffchainLabs/oods"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "OODS contract"

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
# stylus-sdk = { version = "0.9.0" }
stylus-sdk = { version = "0.9.0", features = ["debug"] }

[dev-dependencies]
alloy-primitives = { version = "=0.8.20", features = ["sha3-keccak"] }
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
stylus-sdk = { version = "0.9.0", features = ["stylus-test"] }
dotenv = "0.15.0"
# motsu = "0.8.0"
hex = { version = "0.4", default-features = false }


[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "oods"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
opt-level = "z"          # optimize for size ("s" may also work)
strip = true             # remove debug info
lto = true               # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds
