[package]
name = "prime_field_element0"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus prime field element 0 implementation"

[dependencies]
alloy-primitives = { version = "=0.8.20" }
alloy-sol-types = "=0.8.20"
mini-alloc = "0.8.4"
hex = "0.4.3"
dotenv = "0.15.0"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
stylus-sdk = { version = "0.8.4", default-features = false, features = [
    "mini-alloc",
] }
macros = { path = "../macros" }

# Motsu (持つ)  test config
# stylus-sdk = { version = "0.8.4", default-features = false, features = [
#     "mini-alloc",
# ] }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
motsu = "0.8.0"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "verifier-channel"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
